Fix start now arrow alignment
On smaller viewports the arrow alignment is broken,
and since the arrow is not inline we have to put a negative background-position to get it lined up.

--- a/app/assets/stylesheets/govuk-component/_button.scss
+++ b/app/assets/stylesheets/govuk-component/_button.scss
@@ -15,7 +15,7 @@
   background-repeat: no-repeat;
 
   @include media-down(mobile) {
-    background-position: 110% 50%;
+    background-position: center right -.35em;
   }
 
   @include ie(7) {
